--- a/Back_End/package.json
+++ b/Back_End/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "pdfkit": "^0.17.1"
