--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
